# api-template-ms

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.staging  Makefile  README.md  commit-tags.cast  compress-all.cast  data_sync_data_folder.cast  dev.env  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yaml  download_blob.cast  download_uncompress_all.cast  index.html  know_path.cast  make auto-format.cast  make build.cast  make clean.cast  make commit-push.cast  make generate-lint-reports.cast  make kill.cast  make lint-check.cast  make lint.cast  make run-local.cast  make run.cast  make test.cast  make wiki-clean.cast  make wiki-generate.cast  minikube-local.cast  mkdocs.yaml  mypy.ini  (+12 more)
.github/workflows/: auto-black.yaml  auto-formatting.yaml  bump-version-v2.yaml  bump-version.yaml  bump=version.yaml  codeql-analysis.yml  deployment.yml  dev-deployment.yml  pr-validation.yml  pr-validator-v2.yml  wiki-publish.yaml
app/: README.md  config.py  db.py  main.py
app/apis/api_a/: submod.py
app/core/: auth.py  config.py
app/routes/: views.py
app/tests/: test_apis.py  test_apis_develop.py  test_functions.py
cast-service/: requirements.txt
cast-service/app/: main.py
cast-service/app/api/: casts.py  db.py  db_manager.py  models.py
css/: prism.css
data/: compression.py  get_data.py  get_data_app.py  settings.py
env-management/: index.html
k8s/: deployment.yaml
movie-service/: requirements.txt
movie-service/app/: main.py
movie-service/app/api/: db.py  db_manager.py  movies.py  service.py
scripts/: commitizen-setup.sh  docker-setup.sh  docker_ci.sh  pydocstyle_wrapper.py  update_deps.sh
search/: search_index.json
templates/: pull_request_template.md
wiki/: env-management.md  get_data_app.py  index.md
wiki/js/: prism.js
