[tool.isort]
profile = "black"
known_third_party = ["fastapi"]
line_length = 120
atomic = true
extend_skip_glob = "migrations,scripts"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true
warn_no_return = false
warn_unused_ignores = true
allow_untyped_globals = true
allow_redefinition = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
check_untyped_defs = true
ignore_errors = true


[tool.pytest.ini_options]
addopts = '''
  --strict-config,
  --strict-markers
  --tb=short
  --cov=app
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=60
  --numprocesses=auto
'''
xfail_strict = true
junit_family = "xunit2"
filterwarnings = "error"
testpaths = "app/tests"
env = [
    "SECRET_KEY=secret",
    "MAX_CONNECTIONS_COUNT=1",
    "MIN_CONNECTIONS_COUNT=1"
]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = [
    "app/__init__.py",
    "pyproject.toml:version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
update_changelog_on_bump = true
tag_format = "$version"
bump_message = "bump: $current_version → $new_version [skip-ci]"
annotated_tag = true

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
extend-exclude = "migrations,scripts"

[tool.poetry]
name = "app"
version = "0.0.0"
description = ""
authors = ["Aritra Biswas <pandalearnstocode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
gunicorn = "^20.1.0"
uvicorn = "^0.16.0"
sqlmodel = "^0.0.5"
alembic = "^1.7.5"
ormar = "^0.10.23"
python-dotenv = "^0.19.2"
python-multipart = "^0.0.5"
pydantic = "^1.8.2"
passlib = "^1.7.4"
PyJWT = "^2.3.0"
databases = "^0.5.3"
asyncpg = "^0.25.0"
loguru = "^0.5.3"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^21.12b0"
pylint = "^2.12.2"
bandit = "^1.7.1"
mypy = "^0.920"
isort = "^5.10.1"
coverage = "^6.2"
requests = "^2.26.0"
pre-commit = "^2.16.0"
commitizen-emoji = "^0.1.5"
commitizen = "^2.20.3"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
